--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,2 +1,8 @@
 // Import page-specific CSS files here.
 @import "home";
+
+body {
+  background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREYAT7stfQnr32aGmH9efZyA7Nkw0pErjg7g&usqp=CAU);
+  background-position: center;
+  background-size: cover;
+}
