--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,10 +1,11 @@
 <h2><%= @list.name %></h2>
 
-<%= link_to "comment", new_list_bookmark_path(@list) %>
-<%= link_to 'detete this list', list_path(@list), method: :delete, class: 'btn btn-cancel', data: { confirm: 'Are you sure you want to delete this list?' } %>
+<%= link_to "comment", new_list_bookmark_path(@list), class:"btn btn-outline-primary" %>
 
 <% @list.bookmarks.each do |bookmark| %>
 <%= bookmark.movie.title %>
 <%= bookmark.comment %>
+<%= link_to 'detete this list', bookmark_path(bookmark), method: :delete, class: 'btn btn-outline-danger', data: { confirm: 'Are you sure you want to delete this list?' } %>
+
 <% end %>
 
