Add dotenv - Protect my secret data in .env file

--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,5 +1,7 @@
+<div class="container bg-light">
 <%= simple_form_for [ @list, @bookmark ] do |f| %>
   <%= f.association :movie %>
   <%= f.input :comment %>
   <%= f.submit "Submit bookmark", class: "btn btn-primary" %>
 <% end %>
+</div>
