--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -2,7 +2,7 @@
 @import "home";
 
 body {
-  background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREYAT7stfQnr32aGmH9efZyA7Nkw0pErjg7g&usqp=CAU);
+  background-image: url(https://c8.alamy.com/comp/2C7HHJ2/film-icon-in-flat-style-popcorn-vector-illustration-on-white-isolated-background-pop-corn-bucket-seamless-pattern-business-concept-2C7HHJ2.jpg);
   background-position: center;
   background-size: cover;
 }
