--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,5 +1,7 @@
+<div class="container bg-light">
 <h2>Add a list</h2>
 <%= simple_form_for(@list) do |f| %>
   <%= f.input :name %>
   <%= f.submit %>
 <% end %>
+</div>
