--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,11 +1,23 @@
-<h2><%= @list.name %></h2>
-
-<%= link_to "comment", new_list_bookmark_path(@list), class:"btn btn-outline-primary" %>
-
-<% @list.bookmarks.each do |bookmark| %>
+<div class="container">
+  <div class="card-trip">
+    <img src="https://cdn.dribbble.com/users/3001495/screenshots/14170144/media/578c2c4c6417b757fe86cc795bdb23cd.jpg" />
+    <div class="card-trip-infos">
+      <div>
+        <h2><%= @list.name %></h2>
+        <%= link_to "comment", new_list_bookmark_path(@list), class:"btn btn-outline-primary" %>
+      </div>
+      <% @list.bookmarks.each do |bookmark| %>
 <%= bookmark.movie.title %>
 <%= bookmark.comment %>
 <%= link_to 'detete this list', bookmark_path(bookmark), method: :delete, class: 'btn btn-outline-danger', data: { confirm: 'Are you sure you want to delete this list?' } %>
 
 <% end %>
+    </div>
+  </div>
 
+
+
+
+
+
+</div>
